# swarm-trenches

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: ingest.yaml  publish.yaml  serve.yaml  synth.yaml  train-14b.yaml  train-32b.yaml  train.yaml
docs/: architecture.md
swarmcode-agent/swarmcode_agent/: __init__.py  code_parser.py  ingest.py  server.py  synth.py  tools.py
swarmcode-cli/swarmcode_cli/: __init__.py  config.py  main.py
swarmcode-registry/swarmcode_registry/: __init__.py  publish.py
swarmcode-trainer/swarmcode_trainer/: __init__.py  eval.py  qlora.py
tests/: __init__.py  conftest.py  test_code_parser.py  test_config.py  test_ingest.py  test_publish.py  test_server.py  test_tools.py
